--- a/index.html
+++ b/index.html
@@ -1,21 +1,56 @@
-<!DOCTYPE html>
-<html lang="ca">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!doctype html>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
-    <title>Consultes de vot</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>Estadístiques "On Votar"</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="css/material.cyan-light_blue.min.css" rel="stylesheet">
     <link href="css/nouislider.min.css" rel="stylesheet">
-    <link href="css/base.css" rel="stylesheet">
-</head>
-<body>
-    <div id="vis">
-      <svg id="map" width="700" height="600"><g transform="translate(0,0)"></g></svg>
-      <div id="timeslider"></div>
-      <span id="timeslider-label"></span>
+    <link href="css/styles.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="mdl-layout mdl-js-layout">
+      <main class="mdl-layout__content mdl-color--grey-100">
+        <div class="mdl-grid main-content">
+          <div id="main-card" class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid mdl-grid--no-spacing mdl-card">
+              <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+                <h2 class="mdl-card__title-text">Estadístiques bot Whatsapp "On Votar"</h2>
+              </div>
+              <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+                Durant els dies previs del referèndum de l'1 d'octubre de 2017 l'estat Espanyol va
+                censurar sense excepció tota pàgina web on es pogués consultar a on et tocava votar.
+                <br/>
+                Per donar més eines a les persones que volien saber a quin col·legi electoral
+                havien d'anar, es va crear un bot de Whatsapp que feia servir les mateixes
+                eines que les webs de la Generalitat per trobar la teva mesa.
+                <br/>
+                El bot només va estar en línia unes hores, però durant aquest temps es van rebre
+                més de 10000 missatges i orientar correctament a més de 4000 persones.
+                Després, Whatsapp va bloquejar el bot. Dos dies més tard, es van publicar
+                els bots de Telegram i Twitter des de canals oficials.
+              </div>
+            </div>
+          <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid mdl-grid--no-spacing mdl-card">
+            <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+              <h2 class="mdl-card__title-text">Mapa d'evolució de les consultes correctes</h2>
+            </div>
+            <div class="mdl-card__supporting-text mdl-color-text--grey-600 w100">
+              <svg id="map" width="100%" height="600"><g transform="translate(0,0)"></g></svg>
+              <div id="timeslider"></div>
+              <span id="timeslider-label"></span>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
-  
+
     <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/material.min.js"></script>
     <script src="./js/d3.min.js"></script>
     <script src="./js/d3-scale-chromatic.v1.min.js"></script>
     <script src="./js/topojson.v2.min.js"></script>
