--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
                 Després, Whatsapp va bloquejar el bot. Dos dies més tard, es van publicar
                 els bots de Telegram i Twitter des de canals oficials.
               </div>
+          </div>
+          <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid mdl-grid--no-spacing mdl-card">
+            <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+              <h2 class="mdl-card__title-text">Ús per edats</h2>
             </div>
+            <div class="mdl-card__supporting-text mdl-color-text--grey-600 w100">
+              <canvas id="ageChart" width="400" height="200"></canvas>
+            </div>
+          </div>
           <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid mdl-grid--no-spacing mdl-card">
             <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
               <h2 class="mdl-card__title-text">Mapa d'evolució de les consultes correctes</h2>
@@ -56,6 +64,7 @@
     <script src="./js/topojson.v2.min.js"></script>
     <script src="./js/wNumb.js"></script>
     <script src="./js/nouislider.min.js"></script>
+    <script src="./js/Chart.bundle.min.js"></script>
     <script src="./js/base.js"></script>
   </body>
 </html>
