--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 més de 10000 missatges i orientar correctament a més de 4000 persones.
                 Després, Whatsapp va bloquejar el bot. Dos dies més tard, es van publicar
                 els bots de Telegram i Twitter des de canals oficials.
+                <br/>
+                Aquestes estadístiques es van guardar per veure l'impacte que va causar una
+                eina així en un moment en el qual era difícil accedir a aquesta informació.
+                Per mantenir la privacitat de tothom, només es van guardar dades no vinculants
+                com l'any de naixement o el codi postal.
               </div>
           </div>
           <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid mdl-grid--no-spacing mdl-card">
