--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 eines que les webs de la Generalitat per trobar la teva mesa.
                 <br/>
                 El bot només va estar en línia unes hores, però durant aquest temps es van rebre
-                més de 10000 missatges i orientar correctament a més de 4000 persones.
+                més de 10000 missatges i orientar correctament a més de 3000 persones.
                 Després, Whatsapp va bloquejar el bot. Dos dies més tard, es van publicar
                 els bots de Telegram i Twitter des de canals oficials.
                 <br/>
@@ -39,6 +39,14 @@
                 Per mantenir la privacitat de tothom, només es van guardar dades no vinculants
                 com l'any de naixement o el codi postal.
               </div>
+          </div>
+          <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid mdl-grid--no-spacing mdl-card">
+            <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+              <h2 class="mdl-card__title-text">Missatges retornats</h2>
+            </div>
+            <div class="mdl-card__supporting-text mdl-color-text--grey-600 w100">
+              <canvas id="messageChart" width="400" height="200"></canvas>
+            </div>
           </div>
           <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid mdl-grid--no-spacing mdl-card">
             <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
