--- a/index.html
+++ b/index.html
@@ -24,21 +24,36 @@
               <div class="mdl-card__supporting-text mdl-color-text--grey-600">
                 Durant els dies previs del referèndum de l'1 d'octubre de 2017 l'estat Espanyol va
                 censurar sense excepció tota pàgina web on es pogués consultar a on et tocava votar.
-                <br/>
+                <br/><br/>
                 Per donar més eines a les persones que volien saber a quin col·legi electoral
                 havien d'anar, es va crear un bot de Whatsapp que feia servir les mateixes
                 eines que les webs de la Generalitat per trobar la teva mesa.
-                <br/>
+                <br/><br/>
                 El bot només va estar en línia unes hores, però durant aquest temps es van rebre
                 més de 10000 missatges i orientar correctament a més de 3000 persones.
                 Després, Whatsapp va bloquejar el bot. Dos dies més tard, es van publicar
                 els bots de Telegram i Twitter des de canals oficials.
-                <br/>
+                <br/><br/>
                 Aquestes estadístiques es van guardar per veure l'impacte que va causar una
                 eina així en un moment en el qual era difícil accedir a aquesta informació.
                 Per mantenir la privacitat de tothom, només es van guardar dades no vinculants
                 com l'any de naixement o el codi postal.
               </div>
+          </div>
+          <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-grid mdl-grid--no-spacing mdl-card">
+            <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+              <h2><strong>3</strong><br /> hores</h2>
+            </div>
+          </div>
+          <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-grid mdl-grid--no-spacing mdl-card">
+            <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+              <h2><strong>10375</strong><br /> missatges rebuts</h2>
+            </div>
+          </div>
+          <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-grid mdl-grid--no-spacing mdl-card">
+            <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+              <h2><strong>3091</strong><br /> col·legis retornats</h2>
+            </div>
           </div>
           <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid mdl-grid--no-spacing mdl-card">
             <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
