--- a/index.html
+++ b/index.html
@@ -76,9 +76,13 @@
               <h2 class="mdl-card__title-text">Mapa d'evolució de les consultes correctes</h2>
             </div>
             <div class="mdl-card__supporting-text mdl-color-text--grey-600 w100">
-              <svg id="map" width="100%" height="600"><g transform="translate(0,0)"></g></svg>
-              <div id="timeslider"></div>
-              <span id="timeslider-label"></span>
+              <div class='mapContainer'>
+                <svg id="map" width="100%" height="600"><g transform="translate(0,0)"></g></svg>
+              </div>
+              <div class='timesliderContainer'>
+                <div id="timeslider"></div>
+                <div id="timeslider-label"></div>
+              </div>
             </div>
           </div>
         </div>
